--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtimageformats-opensource-src (5.1.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Jul 2013 21:53:14 -0300
+
 qtimageformats-opensource-src (5.0.2-1) experimental; urgency=low
 
   * Initial release. (Closes: #697509)
