--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 qtimageformats-opensource-src (5.1.0-1) UNRELEASED; urgency=low
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
+  * Bump Qt build dependencies to 5.1.0~.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Jul 2013 21:53:14 -0300
 
