--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qtimageformats-opensource-src (5.1.0-1) UNRELEASED; urgency=low
   * New upstream release.
   * Bump Qt build dependencies to 5.1.0~.
   * Use QT_SELECT instead of build depending on qt5-default.
+  * Fix watch file.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Jul 2013 21:53:14 -0300
 
