--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,11 @@
-qtimageformats-opensource-src (5.1.0-1) UNRELEASED; urgency=low
+qtimageformats-opensource-src (5.1.0-1) experimental; urgency=low
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
   * Bump Qt build dependencies to 5.1.0~.
   * Use QT_SELECT instead of build depending on qt5-default.
   * Fix watch file.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Jul 2013 21:53:14 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 11 Jul 2013 22:00:10 -0300
 
 qtimageformats-opensource-src (5.0.2-1) experimental; urgency=low
 
