--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtimageformats-opensource-src (5.1.0-2) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 11 Aug 2013 13:25:36 -0300
+
 qtimageformats-opensource-src (5.1.0-1) experimental; urgency=low
 
   * New upstream release.
