--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.1.1-1) UNRELEASED; urgency=low
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 30 Aug 2013 16:24:34 -0300
+
 qtimageformats-opensource-src (5.1.0-2) unstable; urgency=low
 
   * Upload to unstable.
