--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-qtimageformats-opensource-src (5.1.1-1) UNRELEASED; urgency=low
+qtimageformats-opensource-src (5.1.1-1) unstable; urgency=low
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Tight Qt5 build dependencies.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 30 Aug 2013 16:24:34 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 30 Aug 2013 16:28:52 -0300
 
 qtimageformats-opensource-src (5.1.0-2) unstable; urgency=low
 
