--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.1.1-2) UNRELEASED; urgency=low
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 30 Aug 2013 22:39:10 -0300
+
 qtimageformats-opensource-src (5.1.1-1) unstable; urgency=low
 
   * New upstream release.
