--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,14 @@
 qtimageformats-opensource-src (5.1.1-2) UNRELEASED; urgency=low
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Fix orthography in previous changelog.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 30 Aug 2013 22:39:10 -0300
 
 qtimageformats-opensource-src (5.1.1-1) unstable; urgency=low
 
   * New upstream release.
-    - Tight Qt5 build dependencies.
+    - Tighten Qt5 build dependencies.
 
  -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 30 Aug 2013 16:28:52 -0300
 
