--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtimageformats-opensource-src (5.2.0~beta1-1) UNRELEASED; urgency=low
+
+  [ Dmitry Shachnev ]
+  * New upstream beta release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 30 Oct 2013 10:16:42 +0400
+
 qtimageformats-opensource-src (5.1.1-1) unstable; urgency=low
 
   * New upstream release.
