--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-qtimageformats-opensource-src (5.2.0~beta1-1) UNRELEASED; urgency=low
+qtimageformats-opensource-src (5.2.0-1) UNRELEASED; urgency=low
 
   [ Dmitry Shachnev ]
-  * New upstream beta release.
+  * New upstream release.
   * Bump qtbase build-dependency to 5.2.0.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 30 Oct 2013 10:16:42 +0400
