--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-qtimageformats-opensource-src (5.2.0-1) UNRELEASED; urgency=low
+qtimageformats-opensource-src (5.2.0-1) experimental; urgency=low
 
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump qtbase build-dependency to 5.2.0+dfsg.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 30 Oct 2013 10:16:42 +0400
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 12 Dec 2013 19:55:44 -0300
 
 qtimageformats-opensource-src (5.1.1-1) unstable; urgency=low
 
