--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-qtimageformats-opensource-src (5.2.0-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.2.0-2) unstable; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Upload to unstable.
   * Fix orthography in 5.1.1-1 changelog.
   * Update Standards-Version to 3.9.5, no changes required.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 31 Jan 2014 15:19:44 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 31 Jan 2014 15:50:45 -0300
 
 qtimageformats-opensource-src (5.2.0-1) experimental; urgency=low
 
