--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtimageformats-opensource-src (5.2.0-3) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 31 Jan 2014 20:20:13 +0100
+
 qtimageformats-opensource-src (5.2.0-2) unstable; urgency=medium
 
   * Upload to unstable.
