--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.2.1-1) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 14 Feb 2014 11:52:56 -0300
+
 qtimageformats-opensource-src (5.2.0-3) unstable; urgency=medium
 
   [ Pino Toscano ]
