--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-qtimageformats-opensource-src (5.2.1-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.2.1-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
   * Bump Qt build dependencies to 5.2.1.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 14 Feb 2014 11:52:56 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 14 Feb 2014 12:01:59 -0300
 
 qtimageformats-opensource-src (5.2.0-3) unstable; urgency=medium
 
