--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.2.1-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 24 Mar 2014 21:54:17 -0300
+
 qtimageformats-opensource-src (5.2.1-1) experimental; urgency=medium
 
   * New upstream release.
