--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtimageformats-opensource-src (5.2.1-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.2.1-2) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 24 Mar 2014 21:54:17 -0300
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 24 Mar 2014 21:55:11 -0300
 
 qtimageformats-opensource-src (5.2.1-1) experimental; urgency=medium
 
