--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtimageformats-opensource-src (5.2.1-3) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 13 May 2014 17:04:06 +0400
+
 qtimageformats-opensource-src (5.2.1-2) unstable; urgency=medium
 
   * Upload to unstable.
