--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-qtimageformats-opensource-src (5.2.1-3) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.3.0-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Remove dh_builddeb override, xz is now the default compression method.
   * Run tests during build (based on a patch by Chris Gagnon).
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 13 May 2014 17:04:06 +0400
 
