--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.3.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 May 2014 12:40:34 -0300
+
 qtimageformats-opensource-src (5.3.0-1) experimental; urgency=medium
 
   [ Dmitry Shachnev ]
