--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-qtimageformats-opensource-src (5.3.0-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.3.0-2) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * Bump Qt build dependencies.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 May 2014 12:40:34 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 25 May 2014 12:42:35 -0300
 
 qtimageformats-opensource-src (5.3.0-1) experimental; urgency=medium
 
