--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.3.0-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Jun 2014 18:24:37 -0300
+
 qtimageformats-opensource-src (5.3.0-2) experimental; urgency=medium
 
   * Bump Qt build dependencies.
