--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 qtimageformats-opensource-src (5.3.0-3) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Backport Dmitry Shachnev's
+    make_qwebphandler_write_work_on_big_endian_systems.patch to properly handle
+    big endian machines.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Jun 2014 18:24:37 -0300
 
 qtimageformats-opensource-src (5.3.0-2) experimental; urgency=medium
