--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-qtimageformats-opensource-src (5.3.0-3) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.3.0-3) unstable; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Upload to unstable.
   * Backport Dmitry Shachnev's
     make_qwebphandler_write_work_on_big_endian_systems.patch to properly handle
     big endian machines.
   * Build depend upon libwebp >= 0.4.0-4.1~ to solve endianness bug that
     caused a FTBFS in s390x.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 04 Jun 2014 18:24:37 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 06 Jun 2014 23:46:02 -0300
 
 qtimageformats-opensource-src (5.3.0-2) experimental; urgency=medium
 
