--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.3.0-4) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Jun 2014 09:01:04 -0300
+
 qtimageformats-opensource-src (5.3.0-3) unstable; urgency=medium
 
   * Upload to unstable.
