--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.3.0-5) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 29 Jun 2014 16:30:14 -0300
+
 qtimageformats-opensource-src (5.3.0-4) unstable; urgency=medium
 
   * Disable tests until we finish the transition. Now we seem to have problem
