--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 qtimageformats-opensource-src (5.3.2-1) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 16 Sep 2014 15:35:16 -0300
 
 qtimageformats-opensource-src (5.3.1-1) unstable; urgency=medium
