--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qtimageformats-opensource-src (5.3.2-1) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
+    - Removes undistributable files (Closes: #760172).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 16 Sep 2014 15:35:16 -0300
 
