--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtimageformats-opensource-src (5.3.2-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.3.2-2) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 22 Sep 2014 00:09:49 -0300
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 22 Sep 2014 00:15:57 -0300
 
 qtimageformats-opensource-src (5.3.2-1) experimental; urgency=medium
 
