--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.3.2-2~bpo70+1) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 06 Oct 2014 20:55:29 -0300
+
 qtimageformats-opensource-src (5.3.2-2) unstable; urgency=medium
 
   * Upload to unstable.
