--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-qtimageformats-opensource-src (5.3.2-2~bpo70+1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.3.2-2~bpo70+1) wheezy-backports; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Upload to wheezy-bacports.
   * Remove libwebp-dev as a build dependency as the version in Wheezy is too
     old. I requested a backport in #764301.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 06 Oct 2014 20:55:29 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 06 Oct 2014 21:23:07 -0300
 
 qtimageformats-opensource-src (5.3.2-2) unstable; urgency=medium
 
