Start a new changelog entry for 5.4.0.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtimageformats-opensource-src (5.4.0-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Dec 2014 18:25:37 +0300
+
 qtimageformats-opensource-src (5.3.2-2) unstable; urgency=medium
 
   * Upload to unstable.
