--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qtimageformats-opensource-src (5.4.0-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Build-depend on qtbase 5.4.0.
   * Update debian/copyright.
+  * Update Vcs-Browser field to point to cgit interface.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Dec 2014 18:25:37 +0300
 
