--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qtimageformats-opensource-src (5.4.0-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * New upstream release.
+  * Drop fix_libmng_test.patch, applied upstream.
   * Build-depend on qtbase 5.4.0.
   * Update debian/copyright.
   * Update Vcs-Browser field to point to cgit interface.
