--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qtimageformats-opensource-src (5.4.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update debian/watch to use https://download.qt.io/.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 25 Feb 2015 10:57:43 +0300
 
