--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,12 @@
-qtimageformats-opensource-src (5.4.2-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.4.2-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies to 5.4.2.
   * Clear up the list in Uploaders removing people who hasn't committed to the
     repo in more than a year. They can re add themselves whenever they want
     (and we really hope to see you back really soon!).
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 08 May 2015 20:58:17 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 02 Jun 2015 18:22:45 -0300
 
 qtimageformats-opensource-src (5.4.1-1) experimental; urgency=medium
 
