--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.4.2-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 23 Jun 2015 12:34:52 -0300
+
 qtimageformats-opensource-src (5.4.2-1) experimental; urgency=medium
 
   * New upstream release.
