--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtimageformats-opensource-src (5.5.0-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 26 Aug 2015 17:41:43 +0300
+
 qtimageformats-opensource-src (5.4.2-2) unstable; urgency=medium
 
   * Upload to unstable.
