--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtimageformats-opensource-src (5.5.0-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Update debian/copyright.
+  * Bump qtbase5-private-dev build-dependency to 5.5.0.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 26 Aug 2015 17:41:43 +0300
 
