--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.5.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Oct 2015 23:37:27 -0300
+
 qtimageformats-opensource-src (5.5.0-1) experimental; urgency=medium
 
   * New upstream release.
