--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 qtimageformats-opensource-src (5.5.0-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
+    - Bump Qt build dependencies.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Oct 2015 23:37:27 -0300
 
 qtimageformats-opensource-src (5.5.0-1) experimental; urgency=medium
