--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtimageformats-opensource-src (5.5.1-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.5.1-2) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 21 Oct 2015 15:33:38 -0300
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 21 Oct 2015 15:34:47 -0300
 
 qtimageformats-opensource-src (5.5.1-1) experimental; urgency=medium
 
