--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+qtimageformats-opensource-src (5.6.0~beta-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 08 Jan 2016 15:11:15 +0300
+
 qtimageformats-opensource-src (5.6.0~beta-1) experimental; urgency=medium
 
   [ Diane Trout ]
