--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qtimageformats-opensource-src (5.6.0~beta-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Drop unused pkg-kde-tools build-dependency.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 08 Jan 2016 15:11:15 +0300
 
