--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
-qtimageformats-opensource-src (5.6.0~beta-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.6.0-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Drop unused pkg-kde-tools build-dependency.
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream release.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 08 Jan 2016 15:11:15 +0300
 
