--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtimageformats-opensource-src (5.6.0-1) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
+    Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 08 Jan 2016 15:11:15 +0300
 
