--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ qtimageformats-opensource-src (5.6.0-1) UNRELEASED; urgency=medium
     - Bump Qt build dependencies.
     - Switch debian/watch back to the official releases.
   * Remove libjasper-dev from build-dependencies (Closes: #818209).
+  * Switch to secure repos' URLs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 08 Jan 2016 15:11:15 +0300
 
