--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.6.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Jun 2016 20:34:54 -0300
+
 qtimageformats-opensource-src (5.6.0-1) experimental; urgency=medium
 
   [ Dmitry Shachnev ]
