--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,10 @@
-qtimageformats-opensource-src (5.6.1-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.6.1-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies.
   * Bump Standards-Version to 3.9.8, no changes required.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 09 Jun 2016 20:34:54 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 09 Jun 2016 20:49:45 -0300
 
 qtimageformats-opensource-src (5.6.0-1) experimental; urgency=medium
 
