--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qtimageformats-opensource-src (5.6.1-2) UNRELEASED; urgency=medium
 
+  * Upload to unstable.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 13 Jun 2016 09:22:54 -0300
 
 qtimageformats-opensource-src (5.6.1-1) experimental; urgency=medium
