--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-qtimageformats-opensource-src (5.6.1-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.6.1-2) unstable; urgency=medium
 
   * Upload to unstable.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 13 Jun 2016 09:22:54 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 13 Jun 2016 09:29:10 -0300
 
 qtimageformats-opensource-src (5.6.1-1) experimental; urgency=medium
 
