--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qtimageformats-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * New upstream release.
+  * Bump qtbase5-dev build-dependency to 5.7.0.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 11 Jul 2016 23:40:57 +0300
 
