--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,10 @@
-qtimageformats-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.7.0-1) experimental; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release.
   * Bump qtbase5-dev build-dependency to 5.7.0.
   * Update debian/copyright.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 11 Jul 2016 23:40:57 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Mon, 11 Jul 2016 23:54:19 +0300
 
 qtimageformats-opensource-src (5.6.1-2) unstable; urgency=medium
 
