--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.7.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 23 Oct 2016 11:13:19 -0300
+
 qtimageformats-opensource-src (5.7.0-1) experimental; urgency=medium
 
   * New upstream release.
