--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,8 @@
-qtimageformats-opensource-src (5.7.0-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.7.1~20161021-1) UNRELEASED; urgency=medium
+
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * New upstream snapshot.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 23 Oct 2016 11:13:19 -0300
 
