--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.7.1~20161021-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Nov 2016 08:56:06 -0300
+
 qtimageformats-opensource-src (5.7.1~20161021-1) experimental; urgency=medium
 
   * New upstream snapshot.
