--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-qtimageformats-opensource-src (5.7.1~20161021-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.7.1~20161021-2) unstable; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Nov 2016 08:56:06 -0300
+  * Upload to unstable.
+
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 01 Nov 2016 08:58:30 -0300
 
 qtimageformats-opensource-src (5.7.1~20161021-1) experimental; urgency=medium
 
