--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qtimageformats-opensource-src (5.9.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Add myself to Uploaders.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 12 Jun 2017 23:38:14 -0500
 
