--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.9.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 15 Aug 2017 21:01:19 -0300
+
 qtimageformats-opensource-src (5.9.0-1) experimental; urgency=medium
 
   * New upstream release.
