--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-qtimageformats-opensource-src (5.9.1-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.9.1-1) unstable; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Release to unstable.
   * New upstream release.
     - Bump Qt build dependencies.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 15 Aug 2017 21:01:19 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 15 Aug 2017 21:18:24 -0300
 
 qtimageformats-opensource-src (5.9.0-1) experimental; urgency=medium
 
