--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtimageformats-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream release.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 27 Oct 2017 21:09:10 +0300
+
 qtimageformats-opensource-src (5.9.1-1) unstable; urgency=medium
 
   * Release to unstable.
