--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qtimageformats-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Bump qtbase5-dev build-dependency to 5.9.2.
+  * Update to debhelper compat level 10.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 27 Oct 2017 21:09:10 +0300
 
