--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,11 @@
-qtimageformats-opensource-src (5.9.2-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.9.2-1) unstable; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream release.
   * Bump qtbase5-dev build-dependency to 5.9.2.
   * Update to debhelper compat level 10.
   * Bump Standards-Version to 4.1.1, no changes needed.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 27 Oct 2017 21:09:10 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Fri, 27 Oct 2017 21:21:14 +0300
 
 qtimageformats-opensource-src (5.9.1-1) unstable; urgency=medium
 
