--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.9.2-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 24 Nov 2017 17:40:48 -0300
+
 qtimageformats-opensource-src (5.9.2-1) unstable; urgency=medium
 
   * New upstream release.
