--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-qtimageformats-opensource-src (5.9.2-2) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.9.3-1) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Let dh_auto_configure pass cross tools to qmake (Closes: #881691).
     Thanks Helmut Grohne for the patch.
+
+  [ Simon Quigley ]
+  * New upstream release.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 24 Nov 2017 17:40:48 -0300
 
