--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qtimageformats-opensource-src (5.9.2-3) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Mar 2018 10:46:03 -0300
+
 qtimageformats-opensource-src (5.9.2-2) unstable; urgency=medium
 
   * Let dh_auto_configure pass cross tools to qmake (Closes: #881691).
