--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qtimageformats-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+    - Bump Qt build dependencies.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Mar 2018 10:46:03 -0300
 
