Switch Vcs-[Git Browser] to salsa.d.o.
(cherry picked from commit a22c3a77a2535bf376017aa686963603090fd62c)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qtimageformats-opensource-src (5.9.5-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Bump qtbase5-dev build-dependency to 5.9.5.
+  * Switch Vcs-[Git Browser] to salsa.debian.org.
 
  -- Dmitry Shachnev <mitya57@ubuntu.com>  Sat, 14 Apr 2018 12:24:47 +0300
 
