--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtimageformats-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
     - Bump Qt build dependencies.
   * Modify debian/watch to follow new upstream naming convention.
   * Bump Standards-Version to 4.1.3, no changes required.
+  * Switch Vcs-[Git Browser] to salsa.debian.org.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Mar 2018 10:46:03 -0300
 
