--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qtimageformats-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
   * Modify debian/watch to follow new upstream naming convention.
   * Bump Standards-Version to 4.1.3, no changes required.
   * Switch Vcs-[Git Browser] to salsa.debian.org.
+  * Switch to debhelper compat 11.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Mar 2018 10:46:03 -0300
 
