--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-qtimageformats-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
+qtimageformats-opensource-src (5.10.1-1) experimental; urgency=medium
 
-  [ Lisandro Damián Nicanor Pérez Meyer ]
   * New upstream release.
     - Bump Qt build dependencies.
   * Modify debian/watch to follow new upstream naming convention.
@@ -8,7 +7,7 @@ qtimageformats-opensource-src (5.10.1-1) UNRELEASED; urgency=medium
   * Switch Vcs-[Git Browser] to salsa.debian.org.
   * Switch to debhelper compat 11.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Mar 2018 10:46:03 -0300
+ -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 10 Mar 2018 10:57:49 -0300
 
 qtimageformats-opensource-src (5.9.2-2) unstable; urgency=medium
 
